# FastApi

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: __all__models.py  connection.py  create_table.py  models.py
app/routes/: category_routes.py  deps.py  product_routes.py  user_routes.py
app/schemas/: base.py  category.py  product.py
app/test/: deps.py  helpers.py  tests_main.py
app/test/routes/: test_category_routes.py  test_product_routes.py  test_user.py
app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
app/use_cases/: category.py  product.py  user.py
